fixed the footer to the center and also make the map smaller and aligned to center as well

--- a/shoppu/app/assets/stylesheets/static_pages.scss
+++ b/shoppu/app/assets/stylesheets/static_pages.scss
@@ -373,14 +373,16 @@ footer {
     margin-right: auto;
 }
 */
-footer {
+
+#footer {
 
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-}
 
+}
+/*
 footer a {
   color: #555;
 }
@@ -407,8 +409,13 @@ footer ul li {
 
 
 
+#contact{
+    width: 40%;
+    margin-left:30%;
+    margin-right:30%;
 
-
+}
+*/
 // The following is the css for the order reqeust show
 
 th{
@@ -438,5 +445,17 @@ td a:hover{
 
 .panel-body button{
   margin: 5px;
+
+}
+
+
+//styling for map, directions
+
+#directions{
+  //make it center of the page
+  //width:960px;
+  
+  width: 100%;
+  height: 400px;
 
 }
